k8s/graphql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: graphql:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
