k8s/graphql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql
spec:
  selector:
    app: graphql
  ports:
  - port: 80
    targetPort: 8080
